--- a/build.yaml
+++ b/build.yaml
@@ -17,9 +17,15 @@
 #     cmake-args: -DCONFIG_ZMK_STUDIO=y
 #     artifact-name: corne_left_with_studio
 #
+# ---
+# include:
+#   - board: nrf52840dk_nrf52840
+#     shield: dactyl_left
+#   - board: nrf52840dk_nrf52840
+#     shield: dactyl_right
 ---
 include:
-  - board: nrf52840dk_nrf52840
-    shield: dactyl_left
-  - board: nrf52840dk_nrf52840
-    shield: dactyl_right
+   - board: nice_nano_v2
+     shield: dactyl_left
+   - board: nice_nano_v2
+     shield: dactyl_right
