--- a/config/dactyl.conf
+++ b/config/dactyl.conf
@@ -10,14 +10,14 @@
 # CONFIG_WS2812_STRIP=y
 
 #CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-# CONFIG_ZMK_USB_LOGGING=y
+CONFIG_ZMK_USB_LOGGING=y
 
 # Idle after 1 minute of inactivity
 CONFIG_ZMK_IDLE_TIMEOUT=60000
 # Sleep after 2 hours (I really need to figure out a wake button that isn't the reset button)
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=7200000
 
-CONFIG_ZMK_SLEEP=n
+#CONFIG_ZMK_SLEEP=n
 CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
