--- a/boards/shields/dactyl/dactyl.dtsi
+++ b/boards/shields/dactyl/dactyl.dtsi
@@ -35,6 +35,7 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5)                   RC(3,11) RC(3,
       label = "KSCAN";
       
       diode-direction = "col2row";
+      wakeup-source;
       
     };
 };
