--- a/config/dactyl.conf
+++ b/config/dactyl.conf
@@ -13,11 +13,11 @@
 CONFIG_ZMK_USB_LOGGING=y
 
 # Idle after 1 minute of inactivity
-CONFIG_ZMK_IDLE_TIMEOUT=60000
+# CONFIG_ZMK_IDLE_TIMEOUT=60000 ## default 30 sec
 # Sleep after 2 hours (I really need to figure out a wake button that isn't the reset button)
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=7200000
+# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=7200000 ## default 900000ms
 
-#CONFIG_ZMK_SLEEP=n
+#CONFIG_ZMK_SLEEP=n ## default n
 CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
