--- a/config/dactyl.conf
+++ b/config/dactyl.conf
@@ -18,6 +18,6 @@
 # CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=7200000 ## default 900000ms
 
 CONFIG_ZMK_SLEEP=y ## default n
-#CONFIG_ZMK_BATTERY_REPORTING=y
+CONFIG_ZMK_SPLIT=y  ## enabling split keyboard support, default n
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
