--- a/config/dactyl.conf
+++ b/config/dactyl.conf
@@ -4,6 +4,7 @@
 
 # Uncomment the following line to enable the OLED Display
 # CONFIG_ZMK_DISPLAY=y
+CONFIG_BT_DEVICE_NAME_MAX=32
 
 # Uncomment the following lines to enable RGB underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=y
